# wgpu-chessboard-demo

./: Cargo.toml  README.md  build.rs
src/: background.rs  board.frag  board.frag.spv  board.rs  lib.rs  main.rs  piece.rs  pieces.rs  quad.rs  quad.vert  quad.vert.spv  renderable.rs
src/shaders/: board.frag.spv  piece.frag  piece.frag.spv  piece.vert  piece.vert.spv  quad.vert
