[package]
name = "chessboard-rs"
version = "0.1.0"
authors = ["Benjamin Hinchliff <benjamin.hinchliff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
bytemuck = { version = "1.5.1", features = ["derive"] }
env_logger = "0.8.3"
image = "0.23.14"
log = "0.4.14"
nalgebra = { version = "0.26.1", features = ["bytemuck"] }
tokio = { version = "1.5.0", features = ["rt", "macros"] }
wgpu = "0.7.1"
winit = "0.24.0"

[build-dependencies]
globset = "0.4.6"
shaderc = "0.7.2"
anyhow = "1.0.40"
